bootstrap/etherpad-data/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: etherpad-data
  labels:
    app: etherpad-data
